--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  width: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  height: 100px;
+}
+
+.header > a {
+  margin: 0 20px;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.container {
+  position: relative;
+  width: 1280px;
+  min-width: 1280px;
+  margin: 0 auto;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container > .page {
+  position: absolute;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container > .page > .inner {
+  display: flex;
+  justify-content: center;
+}
+
+.container > .page > .inner > h1 {
+  font-size: 52px;
+  letter-spacing: 1rem;
+}
+
+.container > .page > .inner > h1 > .line-wrap {
+  overflow: hidden;
+  height: 66px;
+}
+
+.container > .page > .inner > p {
+  margin-top: 200px;
+  width: 340px;
+  font-weight: 300;
+  line-height: 24px;
+  font-style: 14px;
+}
+
+.page-enter {
+  opacity: 0;
+}
+
+.page-enter-active {
+  opacity: 1;
+  transition: opacity 400ms;
+  transition-delay: 600ms;
+}
+
+.page-exit {
+  opacity: 1;
+}
+
+.page-exit-active {
+  opacity: 0;
 }
